--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>My test page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<h1>Hello this is Mohamed</h2>
-	
-	<script src="app.js"> </script>
+    <h1>Hello this is Mohamed</h1>
+    <script src="app.js"></script>
   </body>
 </html>
