--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello this is Mohamed</h1>
+    <h1>Hello this is medo branch</h1>
     <script src="app.js"></script>
   </body>
 </html>
